2010-10-04  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/include/yarp/os/Bottle.h: the
	tail() of a null bottle should be the empty list
	[thanks Ugo Pattacini]

2010-09-24  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* conf/CMakeLists.txt: add some missing install files
	[thanks Florent D'Halluin]

2010-09-24  Marco Randazzo <marco.randazzo@iit.it>

	* src/libYARP_dev/src/AnalogSensorClient.cpp
	* src/libYARP_dev/include/yarp/dev/IAnalogSensor.h

	IAnalogSensor: added the two more methods to the IAnalogSensor interface:
	calibrateSensor(const double *value) and calibrateChannel(int ch).
	The calibration methods are now implemented in the AnalogSensorClient.cpp
	
2010-09-21  Marco Randazzo <marco.randazzo@iit.it>

	* src/libYARP_dev/src/AnalogSensorClient.cpp
	* src/libYARP_dev/include/yarp/dev/IAnalogSensor.h

	IAnalogSensor: added the two methods calibrateSensor(), calibrateChannel()

2010-09-21  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* conf/YarpVersion.cmake: bump version up to 2.3.1

	* conf/FindGSL.cmake: clean up license statement on this
	file [thanks Jan Woetzel]!

2010-09-20  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* example/swig/CMakeLists.txt: force swig to use .pyd extension
	for python on windows [thanks Ze Ji] [thanks Philipp Robbel]

2010-09-16  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/FindACE.cmake: add a bit of paranoia, don't assume that
	because the debug version of ACE was found, that the release
	version is also available. [Thanks Ze Ji] and
	[thanks Lorenzo Natale] for drawing attention to this.

2010-09-14  Lorenzo Natale  <lorenzo.natale@iit.it>
   * src/libYARP_math/
   
   RandScalar and RandnScalar moved to yarp::math from yarp::math::impl.
   
2010-09-14  Marco Randazzo <marco.randazzo@iit.it>
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h